[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Contro2l.gd" type="Script" id=1]
[ext_resource path="res://assets/all_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/button_styles/del_btn_styles/normal_del_btn.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/button_styles/del_btn_styles/hover_del_btn.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/button_styles/del_btn_styles/disabled.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/button_styles/del_btn_styles/pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/fonts/all_editable_texts.tres" type="DynamicFont" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -280.0
margin_bottom = -656.0
rect_min_size = Vector2( 1000, 80 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
rect_min_size = Vector2( 1000, 80 )
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserCommentLbl" type="Label" parent="HBoxContainer"]
margin_right = 680.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "asdfadsfadsfsadf"
valign = 1
autowrap = true

[node name="DateLbl" type="Label" parent="HBoxContainer"]
margin_left = 712.0
margin_top = 31.0
margin_right = 872.0
margin_bottom = 49.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "The date of today"

[node name="DelBtn" type="Button" parent="HBoxContainer"]
margin_left = 904.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 56.0
rect_min_size = Vector2( 96, 32 )
size_flags_vertical = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 7 )
text = "Delete"
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/DelBtn" to="." method="_on_DelBtn_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/DelBtn" to="." method="_on_DelBtn_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/DelBtn" to="." method="_on_DelBtn_pressed"]
